assets/css/style.scss
/* ... */
.rotate-270 {
  transform: rotate(270deg);
}
.rotate-135 {
  transform: rotate(135deg);
}

.shift-up-container {
  height: -50%;

  .shift-up-item {
    transform: translateY(-50%);
  }
}
.list-group-item {
  border: none;
  border-radius: 0;
}

$class-slug: square !default;

div[class*=" #{$class-slug}"] {
  object-fit: cover;
}

@for $i from 1 through 20 {
  .mh-#{ 30 * $i } {
    max-height: 30px * $i;
  }
  .#{$class-slug}-#{$i} {
    max-width: 10px * $i;
    max-height: 10px * $i;
  }

  @include media-breakpoint-up(md) {
    .#{$class-slug}-md-#{$i} {
      max-width: 10px * $i !important;
      max-height: 10px * $i !important;
    }
  }
}
@include media-breakpoint-up(sm) {
  .#{$class-slug}-sm-auto{
    max-width: none!important;
    max-height: none!important;
  }
}
@include media-breakpoint-up(md) {
  .#{$class-slug}-md-none{
    max-width: none!important;
    max-height: none!important;
  }
}
@include media-breakpoint-up(lg) {
  .#{$class-slug}-lg-none{
    max-width: none!important;
    max-height: none!important;
  }
}
@for $i from 0 through 10 {
  .top-#{ $i * 10 } {
    top: 10% * $i;
  }

  .left-#{ $i * 10 } {
    left: 10% * $i;
  }

  .right-#{ $i * 10 } {
    right: 10% * $i;
  }

  .bottom-#{ $i * 10 } {
    bottom: 10% * $i;
  }

}
@for $i from 0 through 10 {
  .h-#{ $i * 10 }-percent {
    height: 10% * $i;
  }
  @include media-breakpoint-up(md) {
    .h-md-#{ $i * 10 }-percent {
      height: 10% * $i;
    }
  }
  @include media-breakpoint-up(md) {
    .top-md-#{ $i * 10 } {
      top: 10% * $i;
    }
  }
  @include media-breakpoint-up(md) {
    .left-md-#{ $i * 10 } {
      left: 10% * $i;
    }
  }
  @include media-breakpoint-up(md) {
    .right-md-#{ $i * 10 } {
      right: 10% * $i;
    }
  }
  @include media-breakpoint-up(md) {
    .bottom-md-#{ $i * 10 } {
      bottom: 10% * $i;
    }
  }
}
@for $i from 1 through 30 {
  .h-#{ $i } {
    height: 1em * $i!important;
  }
  .w-#{ $i } {
    width: 1em * $i!important;
  }
  @include media-breakpoint-up(md) {
    .h-md-#{ $i } {
      height: 1em * $i!important;
    }
    .w-md-#{ $i } {
      width: 1em * $i!important;
    }
  }
  @include media-breakpoint-up(lg) {
    .h-lg-#{ $i } {
      height: 1em * $i!important;
    }
    .w-lg-#{ $i } {
      width: 1em * $i!important;
    }
  }
}
.w-300 {
  width: 300%;
}

@include media-breakpoint-up(sm) {
  .floatings {
    transform: translateY(100px);
    opacity: 0;
    transition: transform 0.3s ease, opacity 0.3s ease;
  }

  .floatings.floated {
    opacity: 1;
    transform: translateY(0);
  }
}

.agefield {
  position: absolute;
  text-indent: 9999em;
  left: -9999em;
}

.noFoundPage {
  min-height: 840px;
  height: 100vh;
  padding: 20px;
}
.carousel, .carousel-inner {
  height: 100%;
}
.carousel-item {
  @include media-breakpoint-up(sm) {
    padding: 0 50px;
  }
  @include media-breakpoint-up(md) {
    padding: 0 100px;
  }
}
.carousel-indicators {
  clear: both;
  position: relative;
  bottom: 40px;
  li {
    width: 10px;
    height: 10px;
    margin: 0 8px;
    border: 1px solid #0008;
    border-radius: 50%;
    
    &.active {
      border: 1px solid $primary-light;
      background-color: $primary-light;
    }
  }
}
//TODO remove later by proper icon
.carousel-control-next-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
}
.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
}

.right-shape {
  clip-path: polygon(100% 0, 75% 100%, 0 100%, 0 0);
}

.left-shape {
  clip-path: polygon(100% 0, 100% 100%, 0 100%, 25% 0);
}

.mr-minus-15 {
  @include media-breakpoint-up(md) {
    margin-right: -15%;
  }
}

.shape-md-outside {
  @include media-breakpoint-up(md) {
    shape-outside: polygon(100% 0, 100% 100%, 0 100%);
    width: 25%;
    height: 100%;
    min-height: 100px;
    float: right;
    //background: black;
    clip-path: polygon(100% 0px, 10% 100%, 0px 100%, 90% 0);

    //opacity: .2;
    &.shape-left {
      shape-outside: polygon(100% 0, 0 100%, 0 0);
      float: left;
    }
  }
}

@include media-breakpoint-up(md) {
  .aspect_ratio {
    height: 0;
    padding-bottom: 67%;
    position: relative;
    align-content: center;

    > * {
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
    }
  }
}

.aspect_ratio-md {
  @extend .aspect_ratio;
}

.box-shadow {
  box-shadow: 0 5px 10px #0005;
}
.shadow-sm {
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2) !important;
}
.shadow-sm-md-none {
  @include media-breakpoint-up(md) {
    box-shadow: none !important;
  }
}
@include media-breakpoint-up(md) {
  .shadow-md-none {
    box-shadow: none !important;
  }
}
@include media-breakpoint-up(lg) {
  .shadow-lg-none {
    box-shadow: none !important;
  }
}
.bg-tranition {
  transition: background-color $transition ease;
}

body:not(.admin) {
  .form-control {
    background-color: transparent;

    &:focus,
    &:active {
      background-color: white !important;
    }
  }
}

.blue-overlay {
  position: relative;

  &:after {
    content: "";
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    background-color: $blue;
    opacity: 0.3;
    z-index: 1;
  }
}

.blended {
  background-color: $blue;
  background-blend-mode: multiply;
}

.rounded {
  border-radius: 0.15rem !important;
}
.rounded-right-bottom {
  border-bottom-right-radius: 0.15rem !important;
}
.rounded-bottom-left {
  border-bottom-left-radius: 0.15rem !important;
}
.rounded-md {
  border-radius: 1rem !important;
}

.call-to-action {
  width: 100%;
  min-height: 33vh;
}
/* ... */

